fix spacing issue

--- a/css.css
+++ b/css.css
@@ -106,7 +106,7 @@ img.scale-with-grid, #content img {
 }
 
 #container div {
-    display:inline-block;
+    float: left;
     vertical-align:top;
     padding-top: 0;
     margin-top:0;
